[gd_scene load_steps=4 format=3 uid="uid://cv5v0yiinelxn"]

[ext_resource type="Script" path="res://Source/Item/Item.gd" id="1_b331c"]
[ext_resource type="Texture2D" uid="uid://cl346en7ko7ar" path="res://Data/Textures/UI/PRIMARY_INTERACTION.png" id="2_x6dm8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqyat"]
size = Vector2(46, 40)

[node name="Item" type="Sprite2D"]
region_rect = Rect2(-0.972534, 161.695, 33.8843, 28.9256)
script = ExtResource("1_b331c")

[node name="Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_hqyat")

[node name="PickB" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(30, -1.90735e-06)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_x6dm8")

[connection signal="body_shape_entered" from="Area" to="." method="onCharacterEntered"]
[connection signal="body_shape_exited" from="Area" to="." method="onCharacterExited"]
